--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@uploadthing/react": "^7.3.2",
     "airtable": "^0.12.2",
+    "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
