--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,16 +11,21 @@
   },
   "dependencies": {
     "@uploadthing/react": "^7.3.2",
+    "adm-zip": "^0.5.16",
     "airtable": "^0.12.2",
     "lucide-react": "^0.525.0",
+    "mammoth": "^1.9.1",
     "next": "^15.3.5",
+    "openai": "^5.9.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "textract": "^2.5.0",
     "uploadthing": "^7.7.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
